--- a/index.html
+++ b/index.html
@@ -17,9 +17,51 @@
             <h4>Design Process</h4>
             <h4>About Agency</h4>
         </div>
-        <button>Let's Talk</button>
+        <button>Let's Talk <svg fill="none" viewBox="0 0 20 20">
+            <path fill="#fff"
+                d="M2.5 14.375V17.5h3.125l9.217-9.217-3.125-3.125L2.5 14.375Zm14.758-8.508a.83.83 0 0 0 0-1.175l-1.95-1.95a.83.83 0 0 0-1.175 0l-1.525 1.525 3.125 3.125 1.525-1.525Z">
+            </path>
+        </svg></button>
         <div id="expand">
-            
+            <div class="links-div">
+                <h4>Case Studies</h4>
+                <h5><span>Case Studies</span></h5>
+            </div>
+            <div class="links-div">
+                <h4>Areas of experties</h4>
+                <h5><span>AI & ML</span></h5>
+                <h5><span>Fintech</span></h5>
+                <h5><span>Real Estate</span></h5>
+                <h5><span>E-commerce</span></h5>
+                <h5><span>Web 3</span></h5>
+            </div>
+            <div class="links-div">
+                <h4>UIUX Design</h4>
+                <h5><span>Fintech</span></h5>
+                <h5><span>Real Estate</span></h5>
+                <h5><span>E-commerce</span></h5>
+                <h5><span>Web 3</span></h5>
+            </div>
+            <div class="links-div">
+                <h4>PRoduct design</h4>
+                <h5><span>Fintech</span></h5>
+                <h5><span>Real Estate</span></h5>
+                <h5><span>E-commerce</span></h5>
+                <h5><span>Web 3</span></h5>
+            </div>
+            <div class="links-div">
+                <h4>Design Process</h4>
+
+                <h5><span>E-commerce</span></h5>
+                <h5><span>Web 3</span></h5>
+            </div>
+            <div class="links-div">
+                <h4>About Agency</h4>
+                <h5><span>Fintech</span></h5>
+                <h5><span>Real Estate</span></h5>
+                <h5></h5>
+                <h5><span>Web 3</span></h5>
+            </div>
         </div>
     </nav>
     <div id="main">
@@ -32,7 +74,7 @@
                     <h4>Brand Design</h4>
                     <h4>User Experience</h4>
                     <h4>and</h4>
-                    <h4>Digital product design</h4>
+                    <h4>Digital product design</h4>.
                 </div>
         </div>
 
