--- a/index.html
+++ b/index.html
@@ -9,26 +9,14 @@
 <body>
     <nav>
         <h1>Lazarev.</h1>
-        <div id="navlinks">
-            <h4>Case Studies</h4>
-            <h4>Areas of experties</h4>
-            <h4>UI UX Design</h4>
-            <h4>Product Design</h4>
-            <h4>Design Process</h4>
-            <h4>About Agency</h4>
-        </div>
-        <button>Let's Talk <svg fill="none" viewBox="0 0 20 20">
-            <path fill="#fff"
-                d="M2.5 14.375V17.5h3.125l9.217-9.217-3.125-3.125L2.5 14.375Zm14.758-8.508a.83.83 0 0 0 0-1.175l-1.95-1.95a.83.83 0 0 0-1.175 0l-1.525 1.525 3.125 3.125 1.525-1.525Z">
-            </path>
-        </svg></button>
+        
         <div id="expand">
             <div class="links-div">
                 <h4>Case Studies</h4>
                 <h5><span>Case Studies</span></h5>
             </div>
             <div class="links-div">
-                <h4>Areas of experties</h4>
+                <h4>Areas of expertise</h4>
                 <h5><span>AI & ML</span></h5>
                 <h5><span>Fintech</span></h5>
                 <h5><span>Real Estate</span></h5>
@@ -36,7 +24,7 @@
                 <h5><span>Web 3</span></h5>
             </div>
             <div class="links-div">
-                <h4>UIUX Design</h4>
+                <h4>UI UX Design</h4>
                 <h5><span>Fintech</span></h5>
                 <h5><span>Real Estate</span></h5>
                 <h5><span>E-commerce</span></h5>
@@ -63,6 +51,14 @@
                 <h5><span>Web 3</span></h5>
             </div>
         </div>
+
+        <button>Let's Talk <svg fill="none" viewBox="0 0 20 20">
+            <path fill="#fff"
+                d="M2.5 14.375V17.5h3.125l9.217-9.217-3.125-3.125L2.5 14.375Zm14.758-8.508a.83.83 0 0 0 0-1.175l-1.95-1.95a.83.83 0 0 0-1.175 0l-1.525 1.525 3.125 3.125 1.525-1.525Z">
+            </path>
+        </svg></button>
+
+        <div id="nav-line"></div>
     </nav>
     <div id="main">
         <div id="page1">
@@ -76,6 +72,31 @@
                     <h4>and</h4>
                     <h4>Digital product design</h4>.
                 </div>
+
+                <div id="moving-div">
+                    <div id="lblur"></div>
+                    <div class="move">
+                            <img src="https://lazarev.kiev.ua/la24/forbes.svg" alt="">
+                            <img src="https://lazarev.kiev.ua/la24/adweek.svg" alt="">
+                            <img src="https://lazarev.kiev.ua/la24/pmi.svg" alt="">
+                            <img src="https://lazarev.kiev.ua/la24/wf.svg" alt="">
+                            <img src="https://lazarev.kiev.ua/la24/adweek.svg" alt="">
+                            <img src="https://lazarev.kiev.ua/la24/rd.svg" alt="">
+                            <img src="https://lazarev.kiev.ua/la24/pmi.svg" alt="">
+                            <img src="https://lazarev.kiev.ua/la24/webby.svg" alt="">
+                    </div>
+                    <div class="move">
+                        <img src="https://lazarev.kiev.ua/la24/forbes.svg" alt="">
+                        <img src="https://lazarev.kiev.ua/la24/adweek.svg" alt="">
+                        <img src="https://lazarev.kiev.ua/la24/pmi.svg" alt="">
+                        <img src="https://lazarev.kiev.ua/la24/wf.svg" alt="">
+                        <img src="https://lazarev.kiev.ua/la24/adweek.svg" alt="">
+                        <img src="https://lazarev.kiev.ua/la24/rd.svg" alt="">
+                        <img src="https://lazarev.kiev.ua/la24/pmi.svg" alt="">
+                        <img src="https://lazarev.kiev.ua/la24/webby.svg" alt="">
+                    </div>
+                    <div id="rblur"></div>
+                </div>
         </div>
 
         <div id="page2">
@@ -83,6 +104,7 @@
         </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
 </html>
