--- a/index.html
+++ b/index.html
@@ -98,9 +98,36 @@
                     <div id="rblur"></div>
                 </div>
         </div>
-
+        
         <div id="page2">
-
+            <div id="p2left">
+                <p>Exclusive insights into <br>UI/UX and product design</p>
+                <h5>Being a design studio at the forefront of digital transformation and product design, we take it upon
+                    ourselves to drop some knowledge, share insights, let out insider tips, and put our work on full
+                    display</h5>
+            </div>
+            <div id="p2right">
+                <div class="rparts">
+                    <h2>How to Design An AI InterFace Users will <br>Trust in 2024?</h2>
+                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65c5011d306a52274ebea027_cover.webp"
+                        alt="">
+                </div>
+                <div class="rparts">
+                    <h2>The Gestalt Principles Of Design: How <br>Design Forms Visual Perception</h2>
+                    <img src="./bubblepic02.png"
+                        alt="">
+                </div>
+                <div class="rparts">
+                    <h2>Effective Design Principles For <br>Cryptocurrency Trading Interfaces</h2>
+                    <img src="./bubblepic01.png"
+                        alt="">
+                </div>
+                <div class="rparts">
+                    <h2>How AI Influences Design And The<br>UX on AI-Driven Products</h2>
+                    <img src="./bubblepic03.png"
+                        alt="">
+                </div>
+            </div>
         </div>
     </div>
 
