--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LAZAREV.</title>
     <link rel="stylesheet" href="style.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
+    rel="stylesheet"/>
 </head>
 <body>
     <nav>
@@ -127,6 +130,16 @@
                     <img src="./bubblepic03.png"
                         alt="">
                 </div>
+            </div>
+        </div>
+
+        <div id="page3">
+            <video src="https://lazarev.kiev.ua/la24/la-reel--min.mp4"></video>
+            <div id="p3center">
+                <div id="p3icon">
+                    <i class="ri-play-large-fill"></i>
+                </div>
+                <h5>Watch Showreel</h5>
             </div>
         </div>
     </div>
