--- a/index.html
+++ b/index.html
@@ -142,6 +142,59 @@
                 <h5>Watch Showreel</h5>
             </div>
         </div>
+
+        <div id="page4">
+            <div id="p4left">
+                <h1>Success Stories Shaped by Our User Experience Design Agency</h1>
+            </div>
+            <div id="p4right">
+                <h4>Partnership mentality</h4>
+                <p>Along with taking the lead in designing AI-powered solutions, we embody a partnership mentality. This exact commitment has been the bedrock of our clients’ successes. &nbsp;When you choose to collaborate with us, we promise to be right where your audience's changing desires meet your ambitious business goals. We don't settle for mediocrity; we strive for excellence in every Figma pixel, every touchpoint, and every UX interaction.</p>
+                <h4>Results</h4>
+                <p>That is how we've built 50+ sustainable startup products and helped 400+ brands secure millions in funding, achieve successful acquisitions, and establish themselves as globally recognized companies.</p>
+            </div>
+        </div>
+
+        <div id="page5">
+            <div class="box">
+                <span>$500M</span>
+                <h3>In funding secured owning to our designs</h3>
+                <h5>/001</h5>
+            </div>
+            <div class="box">
+                <span>+1 million</span>
+                <h3>Increase in customer base</h3>
+                <h5>/002</h5>
+            </div>
+            <div class="box">
+                <span>1 000 000+</span>
+                <h3>Of active marketplace users</h3>
+                <h5>/003</h5>
+            </div>
+            <div class="box">
+                <span>25 million</span>
+                <h3>Monthly E-commerce visits</h3>
+                <h5>/004</h5>
+            </div>
+            <div class="box">
+                <span>+300%</span>
+                <h3>Increase in sign-up conversion rate</h3>
+                <h5>/005</h5>
+            </div>
+            <div class="box">
+                <span>+42%</span>
+                <h3>Increase in the app’s retention rate</h3>
+                <h5>/006</h5>
+            </div>
+        </div>
+
+        <div id="page6">
+            <div id="p6left"></div>
+            <div id="p6right">
+                <span>Featured digital designed projects</span>
+                <p>Our portfolio encompasses a wide range of digital designs essential for the growth of modern businesses. From B2B SaaS and B2C mobile apps to marketing design for promotions, we display our work created for early-stage startups and enterprises at various stages of their growth.</p>    
+            </div>
+            </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
