--- a/index.html
+++ b/index.html
@@ -188,13 +188,65 @@
             </div>
         </div>
 
+        <div id="page-test">
+            <div id="testleft"></div>
+            <div id="testright">
+                <p> <span>Featured digital <br> designed projects</span> Our portfolio encompasses a wide <span></span>  range of digital designs essential for the growth of modern businesses. From B2B SaaS and B2C mobile apps to marketing design for promotions, we display our work created for early-stage startups and enterprises at various stages of their growth.</p>    
+            </div>
+        </div>
+
         <div id="page6">
-            <div id="p6left"></div>
-            <div id="p6right">
-                <span>Featured digital designed projects</span>
-                <p>Our portfolio encompasses a wide range of digital designs essential for the growth of modern businesses. From B2B SaaS and B2C mobile apps to marketing design for promotions, we display our work created for early-stage startups and enterprises at various stages of their growth.</p>    
+            <div class="section">
+                <div class="s1left">
+                    <h2>Pika AI</h2>
+                    <p>Pika AI is a new and better search <br> engine that harnesses AI technology <br> and helps people find the most revelant <br> and interesting information from across the web.</p>
+                </div>
+                <div class="s2right">
+                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65a93ac90b586168e5917ac8_Rhea%20-%20cover_horizontal_low.webp"
+                    alt="">
+                    <video src="./accern-rhea-cover-big.mp4"></video>
+                </div>
             </div>
+
+            <div class="section">
+                <div class="s1left">
+                    <h2>NODO</h2>
+                    <p>A promo website for unique cinematography equipment. Inertia Wheels MAX –– the first-hand wheels developed to streamline the operating experience.</p>
+                </div>
+                <div class="s2right">
+                    <img src="./whee_pic.png"
+                    alt="">
+                    <video autoplay loop src="https://lazarev.kiev.ua/cases/la24/nodo-cover-big.mp4"></video>
+                </div>
             </div>
+        </div>
+
+        <div id="page7">
+            <div id="p7up">
+              <p> Digital Product <br> Design Services And <br> Solutions We Offer
+              </p>  
+            </div>
+            <div id="p7down">
+                <button>Become a Client</button>
+                <div id="p7-d-right">
+                    <p><span>Services</span>We lead your startup at every step of its <span></span>growth, providing unparalleled
+                        personal service at every interaction. Whether it's launching an MVP, revamping an existing product,
+                        securing funding with UI prototypes, increasing customer engagement, or boosting conversions, we
+                        develop suite of custom tailored design services to fulfill your expectations.
+                    </p>
+                    <div id="p7right-list">
+                        <h1>UI/UX Design</h1>
+                        <div id="flex">
+                            <h4>UX Audit</h4>
+                            <h4>UI Design</h4>
+                            <h4>UX Design</h4>
+                            <h4>UX Research</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
