--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LAZAREV.</title>
+    <title>LAZAREV. 🪀 — Digital Product Design Agency | Award Winning UX & UI Agency</title>
+    <link rel="shortcut icon" href="https://assets-global.website-files.com/64a2ab71942e1d57feb6fe39/6528221f95333ff155d01ad2_fav.gif" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="style.css">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
@@ -409,14 +411,67 @@
                     <p>Instead, we create scalable digital products that meet the ever-evolving demands of our customers, ensuring long-term sustainability.</p>
                 </div>
             </div>
+            <div id="p9-d-bottom">
+                <div id="p9db-part1" class="scrollAnim"></div>
+                <div id="p9db-part2" class="scrollAnim">
+                    <h5>Product Strategy</h5>
+                    <h4><span>1</span>Strategy Workshop</h4>
+                    <h4><span>2</span>Idea Validation</h4>
+                    <h4><span>3</span>Market Research</h4>
+                    <h4><span>4</span>Product Positioning</h4>
+                    <h4><span>5</span>UX Research</h4>
+                    <h4><span>6</span>Functional Decomposition</h4>
+                </div>
+                <div id="p9db-part3" class="scrollAnim">
+                    <h5>UX Design</h5>
+                    <h4><span>7</span>User Flows</h4>
+                    <h4><span>8</span>Prototyping</h4>
+                </div>
+                <div id="p9db-part4" class="scrollAnim">
+                    <h5>UI Design</h5>
+                    <h4><span>9</span>Moodboards</h4>
+                    <h4><span>10</span>Visual Design</h4>
+                    <h4><span>11</span>Hand-off</h4>
+                </div>
+                <div id="p9db-part5" class="scrollAnim">
+                    <h5>Delivery</h5>
+                </div>
+            </div>
         </div>
 
         <div id="page10">
-            work in progress...
+            <div id="p10left">
+                <h1>Have a project <br> in mind? <br> contact us!</h1>
+            </div>
+            <div id="p10right">
+                <div id="sub">
+                    <h3>Subscribe to our newsletter</h3>
+                    <i class="ri-arrow-right-up-line"></i>
+                </div>
+                <div id="email">
+                    <h3>Drop us a line:</h3>
+                    <span>abc@gmail.agency</span>
+                </div>
+                <div id="socials">
+                    <h3>Our Social:</h3>
+                    <div id="links">
+                        <span>LinkedIn</span>
+                        <span>Facebook</span>
+                        <span>Instagram</span>
+                        <span>Dribble</span>
+                        <span>Behance</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+        integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+        integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
 </html>
